# CellForge-Agent

./: .env.example  .gitignore  README.md  __init__.py  demo_registry.py  environment.yml  pyproject.toml  requirements.txt
.claude/: launch.json
docs/superpowers/plans/: 2026-03-31-capability-layer.md
docs/superpowers/specs/: 2026-03-25-ifnb-response-heterogeneity-design.md  2026-03-25-pattern-based-planning-design.md
inputs/exampleProject/: Background.txt  Research.txt
inputs/testProject/: Research.txt  background.txt
skills/celltypist_annotate/: skill.json
skills/harmony_batch/: skill.json
skills/sc-skill-creator/references/: scanpy_reference.md
skills/sc-skill-creator/scripts/: generate_skill_md.py  skill_registry.py  validate_skill.py
skills/scanpy_filter_cells/: skill.json
skills/scanpy_hvg/: skill.json
skills/scanpy_leiden/: skill.json
skills/scanpy_neighbors/: skill.json
skills/scanpy_normalize/: skill.json
skills/scanpy_pca/: skill.json
skills/scanpy_qc/: skill.json
skills/scanpy_rank_genes/: skill.json
skills/scanpy_scale/: skill.json
skills/scanpy_umap/: skill.json
src/: __init__.py  cli.py
src/agent/: __init__.py  agent.py  capability_router.py  critic.py  data_checker.py  deep_research.py  executor.py  memory.py  metrics.py  multimodal.py  planner.py  registry.py  reporter.py  validator.py
src/core/: __init__.py  api_client.py  config.py
src/frontend/: app.py
src/frontend/pages/: analysis_control.py  chat_interaction.py  result_display.py  分析控制.py  结果展示.py  (+1 more)
tests/: test_capability_router.py  test_registry.py
